k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-deployment
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}-deployment
  template:
    metadata:
      labels:
        app: ${APP_NAME}-deployment
    spec:
#      initContainers: TODO add migration logic with drizzle
#        - name: ${APP_NAME}-migrate
#          image: rutger505/${APP_NAME}-websocket:${TAG}
#          command: ["sh", "-c", "echo $(POSTGRES_URL) && npx prisma migrate deploy"]
#          envFrom:
#            - configMapRef:
#                name: ${APP_NAME}-config
#            - secretRef:
#                name: ${APP_NAME}-secret
#          env:
#            - name: POSTGRES_URL
#              value: "postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_HOST):5432/$(POSTGRES_DATABASE)"

      containers:
        - name: ${APP_NAME}
          image: ${DOCKER_IMAGE}:${TAG}
          ports:
            - containerPort: 3000
