k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
